# aoc-2024

./: AoC2024.cabal  LICENSE  README.md  hie.yaml
.github/workflows/: main.yml
day-1/: Main.hs  Part1.hs  Part2.hs
day-10/: Part1.py  Part2.py
day-11/: Part1.hs  Part1Main.hs  Part2.py
day-12/: Part1.py
day-2/: Part1.hs  Part2.hs
day-3/: Part1.hs  Part2.hs
day-4/: Part1.hs  Part2.hs
day-5/: Part1.hs  Part2.hs
day-6/: Part1.hs  Part1Main.hs  Part2.hs
day-7/: Main.hs  Part1.hs  Part2.hs
day-8/: Part1.hs  Part2.hs
day-9/: Part1.hs  Part2.hs
lib/: Utils.hs
