cabal-version: 3.12
name:          AoC2024
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Ayberk Tosun
maintainer:    Ayberk Tosun
category:      Development
build-type:    Simple
synopsis:      My solutions to Advent of Code 2024.
description:   Ayberk Tosun's solutions to Advent of Code 2024.

source-repository head
  type:     git
  location: https://github.com/ayberkt/aoc-2024.git

library
  hs-source-dirs:   lib
  exposed-modules:  Utils
  build-depends:    base >= 4.17 && <= 4.20.0.0
  default-language: Haskell2010

executable Day1Part1
  hs-source-dirs:   day-1
  main-is:          Part1Main.hs
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.20.0.0
  default-language: Haskell2010

executable Day1Part2
  hs-source-dirs:   day-1
  main-is:          Part2Main.hs
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.20.0.0
  default-language: Haskell2010

executable Day2Part1
  hs-source-dirs:   day-2
  main-is:          Part1Main.hs
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.20.0.0
  default-language: Haskell2010

executable Day2Part2
  hs-source-dirs:   day-2
  main-is:          Part2Main.hs
  build-depends:    AoC2024,
                    base >= 4.17
  default-language: Haskell2010

executable Day3Part1
  hs-source-dirs:   day-3
  main-is:          Part1Main.hs
  build-depends:    AoC2024,
                    base       >= 4.17  && <= 4.20.0.0,
                    regex-tdfa >= 1.3.2 && <= 1.3.2.2
  default-language: Haskell2010

executable Day3Part2
  hs-source-dirs:   day-3
  main-is:          Part2Main.hs
  build-depends:    AoC2024,
                    base       >= 4.17  && <= 4.20.0.0,
                    regex-tdfa >= 1.3.2 && <= 1.3.2.2
  default-language: Haskell2010

executable Day4Part1
  hs-source-dirs:   day-4
  main-is:          Part1Main.hs
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.20.0.0
  default-language: Haskell2010

executable Day4Part2
  hs-source-dirs:   day-4
  main-is:          Part2Main.hs
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.20.0.0,
  default-language: Haskell2010

executable Day5Part1
  hs-source-dirs:   day-5
  main-is:          Part1Main.hs
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.20.0.0,
  default-language: Haskell2010

executable Day5Part2
  hs-source-dirs:   day-5
  main-is:          Part2Main.hs
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.20.0.0,
  default-language: Haskell2010

executable Day6Part1
  hs-source-dirs:   day-6
  main-is:          Part1Main.hs
  build-depends:    AoC2024,
                    base >= 4.17   && <= 4.20.0.0,
                    array >= 0.5.7 && <= 0.5.7.0.0
  default-language: Haskell2010

executable Day6Part2
  hs-source-dirs:   day-6
  main-is:          Part2Main.hs
  build-depends:    AoC2024,
                    base  >= 4.17  && <= 4.20.0.0,
                    array >= 0.5.7 && <= 0.5.7.0.0
  default-language: Haskell2010

executable Day7Part1
  hs-source-dirs:   day-7
  main-is:          Part1Main.hs
  ghc-options:      -w -O3
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.20.0.0
  default-language: Haskell2010

executable Day7Part2
  hs-source-dirs:   day-7
  main-is:          Part2Main.hs
  ghc-options:      -w -O3
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.20.0.0
  default-language: Haskell2010
