cabal-version: 3.8
name:          AoC2024
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Ayberk Tosun
maintainer:    Ayberk Tosun
category:      Development
build-type:    Simple
synopsis:      My solutions to Advent of Code 2024.
description:   Ayberk Tosun's solutions to Advent of Code 2024.

source-repository head
  type:     git
  location: https://github.com/ayberkt/aoc-2024.git

common executable-standard
  default-language: Haskell2010
  build-depends:    AoC2024,
                    base >= 4.17 && <= 4.17.21
  ghc-options:      -O3 -w

library
  hs-source-dirs:   lib
  exposed-modules:  Utils
  build-depends:    base >= 4.17 && <= 4.17.21

executable Day1Part1
  import:           executable-standard
  hs-source-dirs:   day-1
  main-is:          Part1Main.hs
  other-modules:    Part1

executable Day1Part2
  import:           executable-standard
  hs-source-dirs:   day-1
  main-is:          Part2Main.hs
  other-modules:    Part2

executable Day2Part1
  import:           executable-standard
  hs-source-dirs:   day-2
  main-is:          Part1Main.hs
  other-modules:    Part1

executable Day2Part2
  import:           executable-standard
  hs-source-dirs:   day-2
  main-is:          Part2Main.hs
  other-modules:    Part2

executable Day3Part1
  hs-source-dirs:   day-3
  main-is:          Part1Main.hs
  build-depends:    AoC2024,
                    base       >= 4.17  && <= 4.17.2.1,
                    regex-tdfa >= 1.3.1 && < 1.4
  default-language: Haskell2010
  other-modules:    Part1

executable Day3Part2
  hs-source-dirs:   day-3
  main-is:          Part2Main.hs
  build-depends:    AoC2024,
                    base       >= 4.17  && <= 4.17.2.1,
                    regex-tdfa >= 1.3.1 && < 1.4
  default-language: Haskell2010
  other-modules:    Part1,
                    Part2

executable Day4Part1
  import:           executable-standard
  hs-source-dirs:   day-4
  main-is:          Part1Main.hs
  other-modules:    Part1

executable Day4Part2
  import:           executable-standard
  hs-source-dirs:   day-4
  main-is:          Part2Main.hs
  other-modules:    Part2

executable Day5Part1
  import:           executable-standard
  hs-source-dirs:   day-5
  main-is:          Part1Main.hs
  other-modules:    Part1

executable Day5Part2
  import:           executable-standard
  hs-source-dirs:   day-5
  main-is:          Part2Main.hs
  other-modules:    Part2

executable Day6Part1
  hs-source-dirs:   day-6
  main-is:          Part1Main.hs
  build-depends:    AoC2024,
                    base >= 4.17   && <= 4.17.2.1,
                    array >= 0.5.4 && <  0.6
  default-language: Haskell2010
  ghc-options:      -O3 -w
  other-modules:    Part1

-- executable Day6Part2
--   hs-source-dirs:   day-6
--   main-is:          Part2Main.hs
--   build-depends:    AoC2024,
--                     base  >= 4.17  && <= 4.17.2.1,
--                     array >= 0.5.4 && <  0.6
--   default-language: Haskell2010
--   other-modules:    Part1,
--                     Part2

executable Day7Part1
  import:           executable-standard
  hs-source-dirs:   day-7
  main-is:          Part1Main.hs
  ghc-options:      -w -O3
  other-modules:    Part1

executable Day7Part2
  import:           executable-standard
  hs-source-dirs:   day-7
  main-is:          Part2Main.hs
  other-modules:    Part2

executable Day8Part1
  import:           executable-standard
  hs-source-dirs:   day-8
  main-is:          Part1Main.hs
  other-modules:    Part1

executable Day8Part2
  import:           executable-standard
  hs-source-dirs:   day-8
  main-is:          Part2Main.hs
  other-modules:    Part1,
                    Part2

executable Day9Part1
  import:           executable-standard
  hs-source-dirs:   day-9
  main-is:          Part1Main.hs
  other-modules:    Part1

executable Day9Part2
  import:           executable-standard
  hs-source-dirs:   day-9
  main-is:          Part2Main.hs
  other-modules:    Part2
